pcs: Fix a couple of xref issues

--- a/libraries/pcs/pcs-docs/sun144.tex
+++ b/libraries/pcs/pcs-docs/sun144.tex
@@ -283,7 +283,7 @@ Fortran-callable routine, the source file must be presented to the link script.
 Note that the complete set of C interfaces for the Starlink libraries
 is not yet available so it may not be possible to write your program entirely
 in C without the aid of something like the
-\xref{CNF package}{sun209} (see SUN/209).
+\xref{CNF package}{sun209}{} (see SUN/209).
 
 To compile and link ADAM programs, it is necessary to add \texttt{/star/bin} to
 your PATH environment variable. This is done if you have `sourced'
