--- a/libraries/pcs/pcs-docs/sun224.tex
+++ b/libraries/pcs/pcs-docs/sun224.tex
@@ -241,7 +241,7 @@ Try typing:
 % hdstrace 3.3
 \end{terminalv}
 
-\xref{HDSTRACE}{sun102}{abstract}\latexonly{ (see SUN/102)}
+\xref{HDSTRACE}{sun102}{} (see SUN/102)
 would normally expect an HDS object (parameter OBJECT) as input and uses
 \texttt{DAT\_ASSOC} to open it.
 In this case it opens the parameter file component and displays:
