lpg: Fix xref to kaplibs

--- a/libraries/lpg/sun263.tex
+++ b/libraries/lpg/sun263.tex
@@ -167,7 +167,7 @@ accessed in the monolith.  For example, \KAPPAref\ invokes
 \end{small}
 
 where \xref{KPG1\_ENVDF}{sun238}{KPG1_ENVDF} inquires whether an environment
-variable is defined or not, and \xref{KPG1\_ENV0R}{sun238}{KPG1_ENV0R}
+variable is defined or not, and \xref{KPG1\_ENV0R}{sun238}{KPG1_ENV0x}
 obtains a floating-point value, but using the default of 0.0 seconds
 should \texttt{KAPPA\_LOOP\_DELAY} be undefined.
 
